--- a/index.css
+++ b/index.css
@@ -213,7 +213,8 @@ body {
     display: inline-block;
     font-size: 14px;
     text-transform: uppercase;
-    margin: 20px;
+    /* margin: 20px; */
+    margin-right: 10px;
     margin-top: 100px;
     padding: 10px;
     line-height: 2em;
@@ -232,6 +233,6 @@ body {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color:rgb(20, 20, 20);
-    font-size: 70px;
-    margin: 150px;
+    font-size: 60px;
+    margin: 0px;
 }
